setup the nasic ignore structure including for docker too

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,43 @@
-node_modules
+# ===============================
+# Dependencies (all projects)
+# ===============================
+node_modules/
+
+# ===============================
+# Bun
+# ===============================
 .bun
 bun.lockb
-dist
+
+# ===============================
+# Environment variables
+# ===============================
 .env
+.env.*
+!.env.example
+
+# ===============================
+# Build outputs
+# ===============================
+dist/
+build/
+coverage/
+
+# ===============================
+# Docker
+# ===============================
+.dockerignore
+docker-compose.override.yml
+
+# ===============================
+# Logs
+# ===============================
+*.log
+
+# ===============================
+# OS / Editor junk
+# ===============================
 .DS_Store
+Thumbs.db
+.vscode/
+.idea/
