--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "lib0": "^0.2.117",
     "mongoose": "^9.1.5",
     "ws": "^8.19.0",
+    "y-protocols": "^1.0.7",
     "yjs": "^13.6.29"
   },
   "devDependencies": {
@@ -25,6 +27,6 @@
     "nodemon": "^3.1.11"
   },
   "engines": {
-  "node": ">=20"
+    "node": ">=20"
   }
 }
