--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,11 @@
   "license": "ISC",
   "packageManager": "pnpm@10.28.2",
   "dependencies": {
+    "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "google-auth-library": "^10.5.0",
+    "jsonwebtoken": "^9.0.3",
     "lib0": "^0.2.117",
     "mongoose": "^9.1.5",
     "passport": "^0.7.0",
